--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,42 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
+   <link rel="icon" type="image/png" href="assets/icon.png">
+
+   <link rel="manifest" href="manifest.webmanifest">
+   
+<link rel="icon" type="image/png" href="assets/icon-192x192.png">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+
+
+<meta name="theme-color" content="#1976d2">
+
+
+  
+
 
   <meta charset="utf-8">
   <title>नमस्ते भारत</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
